--- a/html/bbrock_assign6_msds6391.html
+++ b/html/bbrock_assign6_msds6391.html
@@ -3,6 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <title>Topic Models Web Page</title>
+<style>
+	body {
+		font-family: Arial;
+	}
+	
+	li:hover {
+		color: blue;
+	}
+	
+	img:hover {
+		width: 400px;
+		height: 500px;
+		border: 3px solid blue;
+	}
+</style>
 </head>
 
 <body>
